added progress & program section

--- a/index.html
+++ b/index.html
@@ -152,7 +152,108 @@
         </section>
     </header>
     <main>
-
+        <!-- progress section -->
+        <section>
+            <div class="container mx-auto lg:px-10 px-4 my-8">
+                <div class="text-center border-y border-dotted-black py-10">
+                    <h3 class="lg:text-4xl text-3xl font-bold">Professional Hockeys Club</h3>
+                    <p class="text-base font-normal text-gray-400 mt-4">Hockey aficionado, constantly tracking player
+                        stats and game developments, with a <br> passion for legendary rivalries and moments. </p>
+                </div>
+                <div class="grid grid-cols-1 lg:grid-cols-4">
+                    <div class="flex flex-col justify-center items-center space-y-3 p-4 w-full h-64">
+                        <div class="radial-progress bg-primary text-primary-content border-primary border-4"
+                            style="--value:80;" role="progressbar">
+                            80%
+                        </div>
+                        <h4 class="font-semibold text-xl text-center">Prayer Facility</h4>
+                        <p class="text-center ">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                    </div>
+                    <div class="flex flex-col justify-center items-center space-y-3 p-4 w-full h-64">
+                        <div class="radial-progress bg-primary text-primary-content border-primary border-4"
+                            style="--value:60;" role="progressbar">
+                            60%
+                        </div>
+                        <h4 class="font-semibold text-xl text-center">Prayer Facility</h4>
+                        <p class="text-center ">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                    </div>
+                    <div class="flex flex-col justify-center items-center space-y-3 p-4 w-full h-64">
+                        <div class="radial-progress bg-primary text-primary-content border-primary border-4"
+                            style="--value:75;" role="progressbar">
+                            75%
+                        </div>
+                        <h4 class="font-semibold text-xl text-center">Prayer Facility</h4>
+                        <p class="text-center ">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                    </div>
+                    <div class="flex flex-col justify-center items-center space-y-3 p-4 w-full h-64">
+                        <div class="radial-progress bg-primary text-primary-content border-primary border-4"
+                            style="--value:90;" role="progressbar">
+                            90%
+                        </div>
+                        <h4 class="font-semibold text-xl text-center">Prayer Facility</h4>
+                        <p class="text-center ">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Program Sections -->
+        <section>
+            <div class="container mx-auto lg:px-10 px-4 my-8">
+                <div class="text-center border-y border-dotted-black py-10">
+                    <h3 class="lg:text-4xl text-3xl font-bold">Program Sections</h3>
+                    <p class="text-base font-normal text-gray-400 mt-4">Long-time hockey supporter, cherishing the
+                        sport's tradition, <br> grit, and the excitement of overtime thrillers. </p>
+                </div>
+                <div>
+                    <div class="grid lg:grid-rows-2 mt-10 space-y-5 grid-cols-1">
+                        <div class="flex gap-5 flex-col lg:flex-row">
+                            <div class="hero bg-cover rounded-2xl" style="background-image: url('/Images/2.png');">
+                                <div class="hero-overlay rounded-2xl bg-opacity-50"></div>
+                                <div class="px-10 pt-24 pb-10 text-neutral-content">
+                                    <div class="">
+                                        <h1 class="mb-5 text-3xl font-bold">Teenager Program</h1>
+                                        <p class="mb-5">
+                                            Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi
+                                            exercitationem
+                                            quasi. In deleniti eaque aut repudiandae et a id nisi.
+                                        </p>
+                                        <button class="btn btn-error">Register Now</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="hero bg-cover rounded-2xl" style="background-image: url('/Images/3.png');">
+                                <div class="hero-overlay rounded-2xl bg-opacity-50"></div>
+                                <div class="px-10 pt-24 pb-10 text-neutral-content">
+                                    <div class="">
+                                        <h1 class="mb-5 text-3xl font-bold">Professional Program</h1>
+                                        <p class="mb-5">
+                                            Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi
+                                            exercitationem
+                                            quasi. In deleniti eaque aut repudiandae et a id nisi.
+                                        </p>
+                                        <button class="btn btn-error">Register Now</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="hero bg-cover rounded-2xl " style="background-image: url('/Images/4.png');">
+                            <div class="hero-overlay rounded-2xl bg-opacity-50"></div>
+                            <div class="px-10 pt-24 pb-10 text-neutral-content">
+                                <div class="text-left">
+                                    <h1 class="mb-5 text-3xl font-bold">Hello there</h1>
+                                    <p class="mb-5 lg:w-2/4 w-full">
+                                        Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi
+                                        exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi this is a
+                                        hockey field.
+                                    </p>
+                                    <button class="btn btn-error">Register Now</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
