added social, footer & complete the hockey website

--- a/index.html
+++ b/index.html
@@ -609,9 +609,69 @@
                 </div>
             </div>
         </section>
+        <!-- social -->
+        <section>
+            <div class="container mx-auto lg:px-10 px-4 my-8">
+                <div class="bg-slate-100 w-full h-40 py-12 rounded-xl">
+                    <h3 class="font-bold text-2xl text-center">Social Media</h3>
+                    <div class="flex justify-center gap-5 mt-6">
+
+                        <i class="fa-brands fa-facebook fa-shake fa-xl"></i>
+                        <i class="fa-brands fa-twitter fa-bounce fa-xl"></i>
+                        <i class="fa-brands fa-github fa-bounce fa-xl"></i>
+                        <i class="fa-brands fa-instagram fa-shake fa-xl"></i>
+
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <!-- footer -->
+        <div class=" bg-black text-base text-white py-10 lg:p-28 md:p-24">
+            <div class="container mx-auto lg:px-10 px-4 my-8">
+                <div class="grid grid-cols-2 justify-around lg:grid-cols-4 gap-10 lg:gap-40">
+                    <nav class="flex flex-col col-span-2 lg:col-span-1  lg:space-y-4 w-full lg:text-left text-center">
+                        <h6 class="footer-title">Get In Touch</h6>
+                        <a class="link link-hover">Dit amet consectetur. There are many rtypes of various placerat
+                            dolor in this company.
+                        </a>
+                        <div class="flex items-center gap-2  justify-center ">
+                            <i class="fa-solid fa-message" style="color: red"></i>
+                            <p class="font-medium text-base ">hockeys@support.com</p>
+                        </div>
+                        <div class="flex items-center justify-center  gap-2 ">
+                            <i class="fa-solid fa-phone" style="color: red;"></i>
+                            <p class="font-medium text-base ">(+62) 123-321-543</p>
+                        </div>
+                    </nav>
+                    <nav class="flex flex-col lg:space-y-4 w-full lg:text-left text-center">
+                        <h6 class="footer-title">Services</h6>
+                        <a class="link link-hover">Branding</a>
+                        <a class="link link-hover">Design</a>
+                        <a class="link link-hover">Marketing</a>
+                        <a class="link link-hover">Advertisement</a>
+                        <a class="link link-hover">Placement</a>
+                    </nav>
+                    <nav class="flex flex-col lg:space-y-4 w-full lg:text-left text-center">
+                        <h6 class="footer-title">Company</h6>
+                        <a class="link link-hover">About us</a>
+                        <a class="link link-hover">Contact</a>
+                        <a class="link link-hover">Contact form</a>
+                        <a class="link link-hover">Jobs Enquiry</a>
+                        <a class="link link-hover">Press kit</a>
+                    </nav>
+                    <nav class="flex flex-col col-span-2 lg:col-span-1 lg:space-y-4 w-full lg:text-left text-center">
+                        <h6 class="footer-title">Support</h6>
+                        <a class="link link-hover">Terms of use</a>
+                        <a class="link link-hover">Data of use</a>
+                        <a class="link link-hover">Security policy</a>
+                        <a class="link link-hover">Privacy policy</a>
+                        <a class="link link-hover">Cookie policy</a>
+                    </nav>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 
