--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 <div>
                     <div class="grid lg:grid-rows-2 mt-10 space-y-5 grid-cols-1">
                         <div class="flex gap-5 flex-col lg:flex-row">
-                            <div class="hero bg-cover rounded-2xl" style="background-image: url('/Images/2.png');">
+                            <div class="hero bg-cover rounded-2xl" style="background-image: url('./Images/2.png');">
                                 <div class="hero-overlay rounded-2xl bg-opacity-50"></div>
                                 <div class="px-10 pt-24 pb-10 text-neutral-content">
                                     <div class="">
@@ -221,7 +221,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="hero bg-cover rounded-2xl" style="background-image: url('/Images/3.png');">
+                            <div class="hero bg-cover rounded-2xl" style="background-image: url('./Images/3.png');">
                                 <div class="hero-overlay rounded-2xl bg-opacity-50"></div>
                                 <div class="px-10 pt-24 pb-10 text-neutral-content">
                                     <div class="">
@@ -236,7 +236,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="hero bg-cover rounded-2xl " style="background-image: url('/Images/4.png');">
+                        <div class="hero bg-cover rounded-2xl " style="background-image: url('./Images/4.png');">
                             <div class="hero-overlay rounded-2xl bg-opacity-50"></div>
                             <div class="px-10 pt-24 pb-10 text-neutral-content">
                                 <div class="text-left">
@@ -482,7 +482,7 @@
                     <div class="hero">
                         <div
                             class="hero-content flex justify-center items-center flex-col md:flex-row my-10  lg:flex-row border-2 border-stone-200 rounded-xl">
-                            <img src="/images/11.png" class="lg:w-[550px] lg:h-[550px] rounded-lg" />
+                            <img src="/Images/11.png" class="lg:w-[550px] lg:h-[550px] rounded-lg" />
                             <div class="flex flex-col gap-6">
                                 <div class="collapse collapse-plus bg-base-200">
                                     <input type="radio" name="my-accordion-3" checked="checked" />
