--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </style>
 </head>
 
-<body>
+<body class="font-manrope">
     <header>
         <!-- navbar -->
         <div class="container mx-auto lg:px-10 px-4 my-8">
