update client section image

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                     <div class="hero">
                         <div
                             class="hero-content flex justify-center items-center flex-col md:flex-row my-10  lg:flex-row border-2 border-stone-200 rounded-xl">
-                            <img src="/Images/11.png" class="lg:w-[550px] lg:h-[550px] rounded-lg" />
+                            <img src="Images/11.png" class="lg:w-[550px] lg:h-[550px] rounded-lg" />
                             <div class="flex flex-col gap-6">
                                 <div class="collapse collapse-plus bg-base-200">
                                     <input type="radio" name="my-accordion-3" checked="checked" />
